--- a/src/main/webapp/WEB-INF/pages/dramaDetails.html
+++ b/src/main/webapp/WEB-INF/pages/dramaDetails.html
@@ -1,7 +1,13 @@
 <%@ taglib uri="http://www.springframework.org/tags/form" prefix="form"%>
 <div style="overflow: scroll;">
 	<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
-		
+		<div class="row">
+			<ol class="breadcrumb">
+				<li><a href="#"><svg class="glyph stroked home">
+							<use xlink:href="#stroked-home"></use></svg></a></li>
+				<li class="active">Registration</li>
+			</ol>
+		</div>
 		<div class="row">
 			<div class="col-lg-12">
 				<h1 class="page-header">Register</h1>
@@ -9,6 +15,25 @@
 		</div>
 	<div class="panel panel-default" >	
 	<form:form method="POST" action="register" modelAttribute="users">
+	<script>
+   function previewFile(){
+       var preview = document.querySelector('img'); //selects the query named img
+       var file    = document.querySelector('input[type=file]').files[0]; //sames as here
+       var reader  = new FileReader();
+
+       reader.onloadend = function () {
+           preview.src = reader.result;
+       }
+
+       if (file) {
+           reader.readAsDataURL(file); //reads the data as a URL
+       } else {
+           preview.src = "";
+       }
+  }
+
+  previewFile();  //calls the function named previewFile()
+  </script>
 		<div class="panel-body" cssClass="error">
 			<form:errors path="firstname" element="div" />
 			<form:errors path="lastname" element="div" />
@@ -26,64 +51,58 @@
 
 			<div class="row">
 				<div class="col-sm-6 form-group">
-					<label>First Name</label>
+					<label>Drama Name</label>
 					<form:input type="text" placeholder="Enter First Name Here.."
 						class="form-control" path="firstname" />
 
 				</div>
 				<div class="col-sm-6 form-group">
-					<label>Last Name</label>
+					<label>Drama Date Time </label>
 					<form:input type="text" placeholder="Enter Last Name Here.."
 						class="form-control" path="lastname" />
 
 				</div>
 			</div>
 			<div class="form-group">
-				<label>Address</label>
+				<label>Star Cast</label>
 				<form:textarea placeholder="Enter Address Here.." rows="3"
 					class="form-control" path="address" />
 			</div>
 			<div class="row">
 				<div class="col-sm-4 form-group">
-					<label>City</label>
+					<label>Director</label>
 					<form:input type="text" placeholder="Enter City Name Here.."
 						class="form-control" path="city" />
 				</div>
 				<div class="col-sm-4 form-group">
-					<label>State</label>
+					<label>Writer</label>
 					<form:input type="text" placeholder="Enter State Name Here.."
 						class="form-control" path="state" />
 				</div>
-				<div class="col-sm-4 form-group">
-					<label>Zip</label>
-					<form:input type="text" placeholder="Enter Zip Code Here.."
-						class="form-control" path="zipcode" />
-				</div>
+				
+			</div>
+			<div class="form-group">
+				<label>Image Upload</label>
+				
+				<%-- <form:textarea placeholder="Attach Image Here.." rows="3"
+					class="form-control" path="address" /> --%>
+		<form:input type="file" onchange="previewFile()" class="form-control" path="address" /><br>
+		<form:img src="" height="200" alt="Image preview..." />
+		
 			</div>
 			<div class="row">
 				<div class="col-sm-6 form-group">
-					<label>Title</label>
-					<form:input type="text" placeholder="Enter Designation Here.."
-						class="form-control" path="title" />
+					<label>Group Name</label>
+					<form:input type="text" placeholder="Enter Group Name Here.."
+						class="form-control" path="group_name" />
 				</div>
 				<div class="col-sm-6 form-group">
-					<label>Company</label>
-					<form:input type="text" placeholder="Enter Company Name Here.."
-						class="form-control" path="company_name" />
+					<label>Auditorium Name</label>
+					<form:input type="text" placeholder="Enter Auditorium Name Here.."
+						class="form-control" path="auditorium_name" />
 				</div>
 			</div>
-			<div class="form-group">
-				<label>Phone Number</label>
-				<form:input type="text" placeholder="Enter Phone Number Here.."
-					class="form-control" path="phone" />
-
-			</div>
-			<div class="form-group">
-				<label>Email Address</label>
-				<form:input type="text" placeholder="Enter Email Address Here.."
-					class="form-control" path="username" />
-
-			</div>
+			
 
 			<form:button type="submit" class="btn btn-lg btn-info">Submit</form:button>
 		</div>
